Time: 2519 ms (5%), Space: 53.3 MB (9.44%) - LeetHub